--- a/sass/common/global.scss
+++ b/sass/common/global.scss
@@ -6,6 +6,7 @@
 
 //common css
 @import "../components/variables";
+@import "../components/mixins";
 @import "../common/common";
 
 // Components  css
@@ -14,6 +15,8 @@
 @import "../components/footer";
 @import "../components/tips";
 @import "../components/sidebar";
+@import "../components/progress-bar";
+@import "../components/grid";
 
 //pages css
 @import "../pages/index";
