--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -4,54 +4,50 @@
 * @update: V.0.0.1 (2015-12-23 18:32)
 */
 
-//variables
-$half : 50%;
-$quarter : 25%;
-$text-l :left;
-$text-c :center;
-$text-r :right;
-$bold : bold;
-$normal : normal;
-
-.text-l{
-  text-align:$text-l;
-}
-.text-c{
-  text-align:$text-c;
-}
-.text-r{
-  text-align:$text-r;
-}
-.float-l {
-  float: $float-l;
-}
-.float-r {
-  float: $float-r;
-}
-.deuce {
-  width: $half;
-  float: $float-l;;
-}
 .plf-info {
   border-bottom:1px solid $gray-lighter;
+  @media (max-width: $screen-md-min){
+    display: none;
+  }
 }
 .stress-text {
   color: $red;
   font-weight:$bold;
 }
-.margin-t30 {
-  margin-top:30px;
+//media query
+@media (max-width: $screen-sm-min) {
+  .order-mean {
+    display: block;
+  }
+  .video-link,.invest-notice,.simple-text  {
+    display: none;
+  }
 }
-.marin-b30 {
-  margin-bottom:30px;
+@media (min-width: $screen-md-min) {
+  .order-mean {
+    display: inline-block;
+    float: $float-r;
+  }
+  .video-link,.invest-notice,.simple-text {
+    display: none;
+  }
 }
+@media (min-width: $screen-lg-min) {
+  .order-mean ,.simple-text {
+    display: inline-block;
+  }
+  .invest-notice {
+    display: block;
+  }
+}
+
 //
 .icon-text{
   &{
     padding:40px 0px 50px;
   }
   .icon-item{
-    float: left;
+    float: $float-l;
     width:$quarter;
   }
   .glyphicon {
@@ -75,7 +71,7 @@ $normal : normal;
     border-left: 1px solid $gray-lighter;
   }
   .static-items {
-    float: left;
+    float: $float-l;
     width:$half;
     padding:15px 0;
   }
@@ -83,7 +79,7 @@ $normal : normal;
     font-size: 15px;
   }
   .static-number {
-    font-size:21px;
+    font-size:$font-size-base * 2.1;
     color: $red;
     font-weight:$bold;
   }
@@ -93,10 +89,10 @@ $normal : normal;
   padding-bottom:30px;
 }
 .bg-gray {
-  background-color: #ebebeb;
+  background-color: lighten($gray-base, 92%);
 }
 .project-list-header {
-  background-color: #fff;
+  background-color: $white;
   margin-bottom:30px;
   padding:30px 20px;
   border-radius:5px;
@@ -108,14 +104,12 @@ $normal : normal;
       font-size:15px;
     }
     a {
-      color: #333333;
+      color: $gray-darkest;
     }
   }
   .top-nav-pipe {
     float: left;
-    /*height:40px;*/
     padding: 0 $padding-base-horizontal;
-    /*line-height:40px;*/
     color: $gray-lighter;
   }
 }
@@ -129,16 +123,16 @@ $normal : normal;
         margin-bottom:30px;
       }
       .product-item {
-        background-color: #fff;
+        background-color: $white;
         border-radius:5px;
         padding:15px;
-        position: relative;
+        position: $relative;
         overflow: hidden;
         
         .pdt-type-title {
           margin-top:8px;
           margin-bottom:0;
-          font-size:12px;
+          font-size:$font12;
           color: #9ea7b3;
         }
         .product-item-name {
@@ -146,16 +140,16 @@ $normal : normal;
           font-size: 15px;
         }
         .repayment {
-          position: absolute;
+          position: $absolute;
           display: none;
           width:92px;
           height:92px;
           right: 30px;
           top:20%;
-          background: url('#{$icon-path}#{repayment}.png');;
+          background: url('#{$icon-path}#{repayment}.png');
         }
         .experience-v {
-          position: absolute;
+          position: $absolute;
           width:92px;
           height:15px;
           left: -52px;
@@ -173,40 +167,32 @@ $normal : normal;
         }
       }
       .product-item-gray {
-        background-color :#e5e5e5;
+        background-color :lighten($gray-base, 90%);
         .repayment {
           display: block;
         }
       }
       .product-item-red {
         background-color :$red;//e61e25
-        color: #fff;
+        color: $white;
         .pdt-type-title,.amount-count,.profit-per,.rate-word {
-          color: #fff;
+          color: $white;
         }
         .tex-like-icon {
           visibility: hidden;
         }
       }
       .amount-count {
-        font-size:18px;
+        font-size:$font18;
         color: #586a80;
-        line-height:18px;
+        line-height:$font18;
         em {
-          font-size:12px;
+          font-size:$font12;
         }
         .star-gray {
           color: #bdc3c7;
         }
-        .progress {
-          height:10px;
-          margin-top:8px;
-          border-radius:10px;
-          background-color: #ebebeb;
-          .progress-bar {
-            background-color:#475b66;
-          }
-        }
+
       }
     }
 
@@ -214,16 +200,16 @@ $normal : normal;
 }
 .rate-profit {
   & {
-    border-left:1px dotted #dedede;
+    border-left:1px dotted lighten($gray-base, 87%);
     padding-left:20px;
-    text-align: center;
+    text-align: $text-c;
     padding-bottom:25px;
   }
   .profit-per {
-    font-size:16px;
+    font-size:$font16;
     color: $red;
       em {
-        font-size:40px;
+        font-size:$font-size-base*4;
       }
   }
   .rate-word {
@@ -232,17 +218,17 @@ $normal : normal;
 }
 .tex-like-icon {
   &{
-    text-align: center;
+    text-align: $text-c;
   }
   span {
     display: inline-block;
     width:18px;
     height:18px;
-    border:1px solid #3e739d;
-    border-radius:3px;
-    line-height:12px;
-    text-align: center;
-    font-size:9px;
+    border:$border-base #3e739d;
+    border-radius:$border-radius-base*1.5;
+    line-height:16px;
+    text-align: $text-c;
+    font-size:$font-size-base*0.9;
   }
   .icon-text-bao {
     border-color: #339999;
@@ -255,15 +241,15 @@ $normal : normal;
 }
 
 .news-outer {
-  padding-top:30px;
-  padding-bottom:30px;
+  padding-top:$number-base*3;
+  padding-bottom:$number-base*3;
   .news-type {
-    padding-bottom:10px;
-    margin-bottom:10px;
-    border-bottom:1px solid #dedede;
-    font-size:18px;
+    padding-bottom:$number-base;
+    margin-bottom:$number-base;
+    border-bottom:$border-base lighten($gray-base, 87%);
+    font-size:$font18;
     .news-more{
-      font-size:14px;
+      font-size:$font14;
       color: $red;;
     }
   }
@@ -293,18 +279,18 @@ $normal : normal;
   background-color: #849094;
 }
 .carousel-indicators .active {
-  position: relative;
+  position: $relative;
   width:9px;
   height:9px;
   margin-right:10px;
   &::after {
-    position: absolute;
+    position: $absolute;
     left:-7px;
     top:-7px;
     width:22px;
     height:22px;
-    border:1px solid #fff;
-    border-radius: 50%;
+    border:$border-base $white;
+    border-radius: $border-radius-largest;
     content: '';
   }
 }
